# real_invest_fl

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  download_gis.ps1  pyproject.toml
alembic/: env.py
alembic/versions/: 25a1f5163f3b_v0_7_county_zips_foreign_key.py  390bc7eab733_v0_6_full_implemenation.py  4ca6031e21c4_properties_v03_nal_rename.py  4ca6031e21c4_properties_v0_3_nal_rename.py  5381f80387ed_v0_5_add_zoning_nav_total_assessment_alt_key index.py  54c4159dbf59_initial_schema_v0_2_all_14_tables.py  a1b2c3d4e5f6_v0_8_widen_own_state.py  b2c3d4e5f6a7_v0_9_arv_columns.py  c3d4e5f6a7b8_v0_10_listing_events_signal_columns.py  d4e5f6a7b8c9_v0_11_properties_bed_bath_source.py  e5f6a7b8c9d0_v0_12_data_source_status.py  f422169456bd_v0_4_replace_scalar_with_json_filter.py  f7a8b9c0d1e2_v0_13_user_tenant_model.py  g8h9i0j1k2l3_v0_14_parcel_sale_history.py  h9i0j1k2l3m4_v0_15_parcel_sale_history_grantor_notnull.py  i0j1k2l3m4n5_v0.16_listing_scores.py  j1k2l3m4n5o6_v0_17_phase4_outreach_schema.py  k2l3m4n5o6p7_v0_18_user_profile_prefs.py  l3m4n5o6p7q8_v0_19_multi_county_profiles.py  (+3 more)
config/: settings.py
docs/: AGENTS.md  CHECKPOINT.md  DECISIONS.md  REFERENCE.md  STATE.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
nginx/: Dockerfile  nginx.conf
real_invest_fl/: __init__.py
scripts/: cold_start.py  compute_absentee_owner.py  compute_years_since_last_sale.py  create_county_folders.py  download_cama.py  enrich_missing_spatial_attrs.py  load_tiger_reference.py  probe_auction_com.py  probe_auction_com_request.py  request_nal_data.py  run_arv.py  run_escambia_cama.py  run_staging_import.py  seed_filter_profile.py  validate_cama.py
tests/: conftest.py  test_api_routes.py  test_auth.py  test_auth_routes.py  test_cama_enricher.py  test_comp_engine.py  test_deal_score.py  test_deps.py  test_filters.py  test_listing_matcher_lookup.py  test_nal_loader.py  test_text.py  test_utils.py
(+118 files in other folders)
